--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -134,7 +134,8 @@ jobs:
           remotes::install_local(".", build = TRUE, upgrade = "never", force = TRUE, build_opts = c("--no-resave-data"), build_manual = TRUE, build_vignettes = TRUE)
           # options(covr.gcov="") # Bug in covr
           # covr::codecov(type="all", quiet=FALSE)
-          covr::package_coverage(type="all", quiet=FALSE, clean=FALSE)
+          dir.create("./tmp-covr")
+          covr::package_coverage(type="all", quiet=FALSE, clean=FALSE, install_path="./tmp-covr")
         shell: Rscript {0}
 
       - name: Upload test results
