--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -143,7 +143,7 @@ jobs:
         uses: actions/upload-artifact@main
         with:
           name: covr-log
-          path: tmp-covr
+          path: /tmp/
 
   pkgdown:
     needs: R-CMD-check
