--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -134,8 +134,9 @@ jobs:
           remotes::install_local(".", build = TRUE, upgrade = "never", force = TRUE, build_opts = c("--no-resave-data"), build_manual = TRUE, build_vignettes = TRUE)
           # options(covr.gcov="") # Bug in covr
           # covr::codecov(type="all", quiet=FALSE)
-          covr::package_coverage(type="examples", quiet=FALSE, clean=TRUE)
-          covr::package_coverage(type="tests", quiet=FALSE, clean=FALSE)
+          # covr::package_coverage(type="examples", quiet=FALSE, clean=TRUE)
+          covr::codecov(type="examples", quiet=FALSE)
+          #covr::package_coverage(type="tests", quiet=FALSE, clean=FALSE)
         shell: Rscript {0}
 
       - name: Upload test results
@@ -143,7 +144,7 @@ jobs:
         uses: actions/upload-artifact@main
         with:
           name: covr-log
-          path: /tmp/
+          path: /tmp/Rtmp*
 
   pkgdown:
     needs: R-CMD-check
