--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,7 +36,7 @@ Suggests:
     covr
 VignetteBuilder: knitr
 License: GPL (>= 2)
-URL: https://mlopez-ibanez.github.io/irace, https://github.com/MLopez-Ibanez/irace
+URL: https://mlopez-ibanez.github.io/irace/, https://github.com/MLopez-Ibanez/irace
 BugReports: https://github.com/MLopez-Ibanez/irace/issues
 ByteCompile: yes
 Encoding: UTF-8
