Use matrixStats package.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,23 +38,18 @@ export(testConfigurations)
 export(testing_fromfile)
 export(testing_fromlog)
 import(compiler)
+import(matrixStats)
 import(stats)
 import(utils)
 importFrom(R6,R6Class)
-importFrom(grDevices,dev.new)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
-importFrom(graphics,barplot)
 importFrom(graphics,boxplot)
 importFrom(graphics,bxp)
 importFrom(graphics,grid)
-importFrom(graphics,lines)
-importFrom(graphics,matplot)
-importFrom(graphics,mtext)
 importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,strwidth)
-importFrom(graphics,text)
