--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -2,9 +2,9 @@
 # https://community.rstudio.com/new-topic?category=Package%20development&tags=github-actions
 on:
   push:
-    branches: [main, master]
+    branches-ignore: [gh-pages]
   pull_request:
-    branches:  [main, master]
+    branches-ignore:  [gh-pages]
 
 name: R-CMD-check
 
