--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -88,6 +88,11 @@ jobs:
           rcmdcheck::rcmdcheck(build_args=c("--compact-vignettes=gs+qpdf"), args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")
         shell: Rscript {0}
 
+      - name: Show testthat output
+        if: failure()
+        run: find check -name 'testthat.Rout*' -exec cat '{}' \; || true
+        shell: bash
+        
       - name: Upload check results
         if: failure()
         uses: actions/upload-artifact@main
@@ -135,9 +140,8 @@ jobs:
           remotes::install_local(".", build = TRUE, upgrade = "never", force = TRUE, build_opts = c("--no-resave-data"), build_manual = TRUE, build_vignettes = TRUE)
           # options(covr.gcov="") # Bug in covr
           # covr::codecov(type="all", quiet=FALSE)
-          covr::codecov(type="examples", quiet=FALSE)
-          covr::codecov(type="vignettes", quiet=FALSE)
-          covr::codecov(type="tests", quiet=FALSE)
+          covr::codecov(type=c("examples","vignettes"), quiet=FALSE)
+          covr::codecov(type="tests", quiet=FALSE, clean=FALSE)
           #covr::package_coverage(type="tests", quiet=FALSE, clean=FALSE)
         shell: Rscript {0}
 
