rename check.output.target.runner to check_output_target_runner and export check_output_target_runner

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(buildCommandLine)
 export(checkIraceScenario)
 export(checkParameters)
 export(checkScenario)
+export(check_output_target_runner)
 export(cmdline_usage)
 export(configurations.print)
 export(configurations.print.command)
