New function read_ablogfile().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(psRace)
 export(readConfigurationsFile)
 export(readParameters)
 export(readScenario)
+export(read_ablogfile)
 export(read_logfile)
 export(read_pcs_file)
 export(removeConfigurationsMetaData)
