New function irace_summarise

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(irace.cmdline)
 export(irace.license)
 export(irace.main)
 export(irace.version)
+export(irace_summarise)
 export(path_rel2abs)
 export(plotAblation)
 export(printParameters)
