--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -16,7 +16,7 @@ env:
   R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
   _R_CHECK_FORCE_SUGGESTS_: false
   _R_CHECK_CRAN_INCOMING_REMOTE_: false
-  LATEX_PACKAGES: oberdiek:grfext:environ:trimspaces:etoolbox:upquote:babel-english:pgf:xcolor:algorithms:relsize:tocbibind:appendix:tocloft:enumitem:listings:tcolorbox:collection-fontsrecommended:framed:inconsolata:microtype
+  LATEX_PACKAGES: "oberdiek grfext environ trimspaces etoolbox upquote babel-english pgf xcolor algorithms relsize tocbibind appendix tocloft enumitem listings tcolorbox collection-fontsrecommended framed inconsolata microtype"
   R_KEEP_PKG_SOURCE: yes
 
 jobs:
@@ -34,7 +34,7 @@ jobs:
           - {os: ubuntu-latest,  r: 'release'}
           - {os: ubuntu-20.04,   r: '3.6'}
           # Use latest ubuntu to make it easier to install dependencies
-          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
+          - {os: ubuntu-latest,  r: 'devel', http-user-agent: 'release'}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
@@ -54,23 +54,18 @@ jobs:
         run: brew install openmpi
         if: runner.os == 'macOS'
 
+      # special branch required for TeX Live 2023 fix
+      - uses: r-lib/actions/setup-tinytex@v2-branch
+      - run: tlmgr --version
+
+      - name: Install additional LaTeX packages
+        run: tlmgr install ${{ env.LATEX_PACKAGES }}
+      
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: cran::XML any::rcmdcheck
           needs: check
           cache-version: 1
-          
-      - name: Install latex
-        uses: r-lib/actions/setup-tinytex@v2
-        env:
-          # install full prebuilt version
-          TINYTEX_INSTALLER: TinyTeX
-
-      - name: Install latex packages
-        run: |
-          remotes::install_cran("tinytex")
-          tinytex::tlmgr_install(pkgs = strsplit(Sys.getenv("LATEX_PACKAGES"),split=":")[[1]])
-        shell: Rscript {0}
 
       - name: Check (NOT CRAN)
         if: success()
@@ -118,22 +113,15 @@ jobs:
         with:
           use-public-rspm: true
 
+      - uses: r-lib/actions/setup-tinytex@v2-branch
+        
+      - name: Install additional LaTeX packages
+        run: tlmgr install ${{ env.LATEX_PACKAGES }}
+
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: cran::XML any::covr
           needs: coverage
-
-      - name: Install latex
-        uses: r-lib/actions/setup-tinytex@v2
-        env:
-          # install full prebuilt version
-          TINYTEX_INSTALLER: TinyTeX
-
-      - name: Install latex packages
-        run: |
-          remotes::install_cran("tinytex")
-          tinytex::tlmgr_install(pkgs = strsplit(Sys.getenv("LATEX_PACKAGES"),split=":")[[1]])
-        shell: Rscript {0}
 
       - name: Test coverage
         env:
@@ -183,23 +171,16 @@ jobs:
         with:
           r-version: ${{ matrix.config.r }}
           use-public-rspm: true
+          
+      - uses: r-lib/actions/setup-tinytex@v2-branch
 
-      - name: Install latex
-        uses: r-lib/actions/setup-tinytex@v2
-        env:
-          # install full prebuilt version
-          TINYTEX_INSTALLER: TinyTeX
+      - name: Install additional LaTeX packages
+        run: tlmgr install ${{ env.LATEX_PACKAGES }}
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: cran::XML any::pkgdown
           needs: website
-
-      - name: Install latex packages
-        run: |
-          remotes::install_cran("tinytex")
-          tinytex::tlmgr_install(pkgs = strsplit(Sys.getenv("LATEX_PACKAGES"),split=":")[[1]])
-        shell: Rscript {0}
 
       - name: Install package with vignettes
         if: success()
