--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -54,6 +54,10 @@ jobs:
         run: brew install openmpi
         if: runner.os == 'macOS'
 
+      - name: Install openmpi on Linux
+        if: runner.os == 'Linux'
+        run: sudo apt-get update -y && sudo apt install -y libopenmpi-dev
+      
       # special branch required for TeX Live 2023 fix
       - uses: r-lib/actions/setup-tinytex@v2-branch
       - run: tlmgr --version
