Use data.table to speed up sampleUniform and sampleModel.
 * DESCRIPTION: Import data.table
 * NEWS.md: Document it.
 * R/configurations.R: New file.
 * R/generation.R (sampleUniform,sampleModel): Use data.table.
 * tests/testthat/bug-13-lookup.rds, tests/testthat/test-bug-13.R: Delete
   because it depends on the previous sampling.
 * R/irace.R: setDTthreads according to parallel.
 * tests/testthat/test-repair.R: Improve tests.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,7 @@ Imports:
         utils,
         compiler,
         fs,
+        data.table (>= 1.15.0),
         matrixStats,
         R6,
         withr
