--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(testConfigurations)
 export(testing_fromfile)
 export(testing_fromlog)
 import(compiler)
+import(data.table)
 import(matrixStats)
 import(stats)
 import(utils)
