New function get_instance_seed_pairs().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(defaultScenario)
 export(getConfigurationById)
 export(getConfigurationByIteration)
 export(getFinalElites)
+export(get_instance_seed_pairs)
 export(has_testing_data)
 export(irace)
 export(irace.cmdline)
