* New functions get_random_seed(), set_random_seed(), restore_random_seed().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(getConfigurationById)
 export(getConfigurationByIteration)
 export(getFinalElites)
 export(get_instance_seed_pairs)
+export(get_random_seed)
 export(has_testing_data)
 export(irace)
 export(irace.cmdline)
@@ -35,8 +36,10 @@ export(read_ablogfile)
 export(read_logfile)
 export(read_pcs_file)
 export(removeConfigurationsMetaData)
+export(restore_random_seed)
 export(scenario.update.paths)
 export(scenario_update_paths)
+export(set_random_seed)
 export(target.evaluator.default)
 export(target.runner.default)
 export(testConfigurations)
