* R/irace.R: Add 'multi_irace' function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(irace.license)
 export(irace.main)
 export(irace.version)
 export(irace_summarise)
+export(multi_irace)
 export(path_rel2abs)
 export(plotAblation)
 export(printParameters)
