* codecov.yml: Show components info in PR comments.

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,4 +1,5 @@
-comment: false
+comment:
+  layout: "header, diff, flags, components"  # show component info in the PR comment
 
 coverage:
   status:
