--- a/codecov.yml
+++ b/codecov.yml
@@ -4,8 +4,17 @@ comment:
 coverage:
   status:
     project:
+       default: false  # disable the default status that measures entire project
+      tests:  # declare a new status context "tests"
+        target: 100%  # we always want 100% coverage here
+        paths: "tests/"  # only include coverage in "tests/" folder
+      code:  # declare a new status context "app"
+        paths: "!tests/"  # remove all files in "tests/"    default:
+        target: auto
+        threshold: 1%
+    patch:
       default:
         target: auto
         threshold: 1%
-    patch: off
-
+        
+        
