--- a/codecov.yml
+++ b/codecov.yml
@@ -1,20 +1,35 @@
 comment:
   layout: "header, diff, flags, components"  # show component info in the PR comment
 
-coverage:
-  status:
-    project:
-      default: false  # disable the default status that measures entire project
-      tests:  # declare a new status context "tests"
-        target: 100%  # we always want 100% coverage here
-        paths: "tests/"  # only include coverage in "tests/" folder
-      code:  # declare a new status context "app"
-        paths: "!tests/"  # remove all files in "tests/"    default:
-        target: auto
-        threshold: 1%
-    patch:
-      default:
-        target: auto
-        threshold: 1%
+# coverage:
+#   status:
+#     project:
+#       default: false  # disable the default status that measures entire project
+#       tests:  # declare a new status context "tests"
+#         target: 100%  # we always want 100% coverage here
+#         paths: "tests/"  # only include coverage in "tests/" folder
+#       code:  # declare a new status context "app"
+#         paths: "!tests/"  # remove all files in "tests/"    default:
+#         target: auto
+#         threshold: 1%
+#     patch:
+#       default:
+#         target: auto
+#         threshold: 1%
         
         
+component_management:
+  default_rules:  # default rules that will be inherited by all components
+    statuses:
+      - type: project # in this case every component that doens't have a status defined will have a project type one
+        target: auto
+  individual_components:
+    - component_id: tests  # this is an identifier that should not be changed
+      name: tests  # this is a display name, and can be changed freely
+      paths:
+        - tests/**
+      statuses:          
+        - type: project
+          target: 100%
+          informational: false
+        - type: patch
