--- a/codecov.yml
+++ b/codecov.yml
@@ -21,7 +21,7 @@ comment:
 component_management:
   default_rules:  # default rules that will be inherited by all components
     statuses:
-      - type: project # in this case every component that doens't have a status defined will have a project type one
+      - type: project # in this case every component that doesn't have a status defined will have a project type one
         target: auto
   individual_components:
     - component_id: tests  # this is an identifier that should not be changed
