--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ import(compiler)
 import(matrixStats)
 import(stats)
 import(utils)
+import(withr)
 importFrom(R6,R6Class)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
