--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,7 @@ export(defaultScenario)
 export(getConfigurationById)
 export(getConfigurationByIteration)
 export(getFinalElites)
-export(get_instance_seed_pairs)
+export(get_instanceID_seed_pairs)
 export(get_random_seed)
 export(has_testing_data)
 export(irace)
