--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,3 +64,4 @@ importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,strwidth)
+importFrom(spacefillr,generate_sobol_set)
