--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -170,12 +170,15 @@ jobs:
         refs/heads/master
         refs/heads/main
       ', github.ref) && github.event_name == 'push'
-    name: pkgdown
     runs-on: ubuntu-latest
+    # Only restrict concurrency for non-PR jobs
+    concurrency:
+      group: pkgdown-${{ github.event_name != 'pull_request' || github.run_id }}
     timeout-minutes: 30
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
 
@@ -183,7 +186,6 @@ jobs:
 
       - uses: r-lib/actions/setup-r@v2
         with:
-          r-version: 'release'
           use-public-rspm: true
           
       - uses: r-lib/actions/setup-tinytex@v2-branch
@@ -197,15 +199,20 @@ jobs:
           needs: website
 
       - name: Install package with vignettes
-        if: success()
         run: |
           remotes::install_local(".", build = TRUE, upgrade = "never", force = TRUE, build_opts = c("--no-resave-data"), build_manual = TRUE, build_vignettes = TRUE)
           dir.create("./pkgdown/assets/")
           file.copy(system.file("doc/irace-package.pdf",package="irace", mustWork=TRUE), "./pkgdown/assets/", overwrite=TRUE)
         shell: Rscript {0}
 
-      - name: Deploy package
-        if: success()
-        run: |
-          pkgdown::deploy_to_branch(new_process = FALSE)
+      - name: Build site
+        run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
         shell: Rscript {0}
+
+      - name: Deploy to GitHub pages 🚀
+        if: github.event_name != 'pull_request'
+        uses: JamesIves/github-pages-deploy-action@v4.5.0
+        with:
+          clean: false
+          branch: gh-pages
+          folder: docs
