--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -44,14 +44,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: r-lib/actions/setup-pandoc@v2
-
-      - uses: r-lib/actions/setup-r@v2
-        with:
-          r-version: ${{ matrix.config.r }}
-          http-user-agent: ${{ matrix.config.http-user-agent }}
-          use-public-rspm: true
-
       - name: "[macOS] Install openmpi"
         if: runner.os == 'macOS'
         run: brew install openmpi
@@ -60,6 +52,12 @@ jobs:
         if: runner.os == 'Linux'
         run: sudo apt-get update -y && sudo apt install -y libopenmpi-dev
       
+      - uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: ${{ matrix.config.r }}
+          http-user-agent: ${{ matrix.config.http-user-agent }}
+          use-public-rspm: true
+
       # special branch required for TeX Live 2023 fix
       - uses: r-lib/actions/setup-tinytex@v2-branch
       - run: tlmgr --version
@@ -67,20 +65,13 @@ jobs:
       - name: Install additional LaTeX packages
         run: tlmgr install ${{ env.LATEX_PACKAGES }}
 
-      - name: Install old version of evaluate for R 3.6
-        if: ${{ matrix.config.r }} == "3.6"
-        run: |
-          install.packages('devtools')
-          devtools::install_version("evaluate", version = "0.23", repos = "http://cran.us.r-project.org")
-          install.packages("testthat")
-        shell: Rscript {0}
-        
       - uses: r-lib/actions/setup-r-dependencies@v2
         if: runner.os != 'macOS'
         with:
           extra-packages: any::rcmdcheck, mlr=?ignore-before-r=4.0.0
           needs: check
           cache-version: 1
+          install-pandoc: true
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         if: runner.os == 'macOS'
@@ -121,8 +112,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: r-lib/actions/setup-pandoc@v2
-
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
@@ -136,6 +125,7 @@ jobs:
         with:
           extra-packages: any::covr, mlr=?ignore 
           needs: coverage
+          install-pandoc: true
 
       - name: Test coverage
         env:
@@ -191,8 +181,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: r-lib/actions/setup-pandoc@v2
-
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
@@ -206,7 +194,8 @@ jobs:
         with:
           extra-packages: any::pkgdown, mlr=?ignore
           needs: website
-
+          install-pandoc: true
+          
       - name: Install package with vignettes
         run: |
           remotes::install_local(".", build = TRUE, upgrade = "never", force = TRUE, build_opts = c("--no-resave-data"), build_manual = TRUE, build_vignettes = TRUE)
