--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -22,21 +22,22 @@ env:
 jobs:
   R-CMD-check:
     if: "! contains(github.event.head_commit.message, '[skip ci]')"
-    runs-on: ${{ matrix.config.os }}
-    name: Check ${{ matrix.config.os }} (${{ matrix.config.r }})
+    runs-on: ${{ matrix.os }}
+    name: Check ${{ matrix.os }} (${{ matrix.r }})
     timeout-minutes: 30
 
     strategy:
       fail-fast: false
       matrix:
-        config:
-          - {os: windows-latest, r: 'release'}
-          - {os: macOS-latest,   r: 'release'}
-          - {os: ubuntu-latest,  r: 'release'}
+        os: [ ubuntu-22.04, windows-latest, macos-13, macos-14 ]
+        r: [ release ]
+        include:
+          # Use 4.0 to check with rtools40's older compiler
+          - { os: windows-latest, r: '4.0' }
           # Minimum supported version.
           - {os: ubuntu-20.04,   r: '4.0'}
-          # Use latest ubuntu to make it easier to install dependencies.
-          - {os: ubuntu-latest,  r: 'devel', http-user-agent: 'release'}
+          # Use latest ubuntu to make it easier to install dependencies
+          - { os: ubuntu-24.04, r: 'devel', http-user-agent: 'release' }
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
@@ -54,8 +55,8 @@ jobs:
       
       - uses: r-lib/actions/setup-r@v2
         with:
-          r-version: ${{ matrix.config.r }}
-          http-user-agent: ${{ matrix.config.http-user-agent }}
+          r-version: ${{ matrix.r }}
+          http-user-agent: ${{ matrix.http-user-agent }}
           use-public-rspm: true
 
       # special branch required for TeX Live 2023 fix
