Do not import the whole package 'utils'.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,7 +65,6 @@ export(testing_fromlog)
 import(data.table)
 import(matrixStats)
 import(stats)
-import(utils)
 import(withr)
 importFrom(R6,R6Class)
 importFrom(graphics,abline)
@@ -78,3 +77,4 @@ importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,strwidth)
 importFrom(spacefillr,generate_sobol_set)
+importFrom(utils,str)
