--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -111,7 +111,7 @@ jobs:
   coverage:
     needs: R-CMD-check
     name: Coverage
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     continue-on-error: true
     timeout-minutes: 30
     env:
@@ -122,6 +122,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r@v2
         with:
+          r-version: release
           use-public-rspm: true
 
       - uses: r-lib/actions/setup-tinytex@v2-branch
